--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,14 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@components": ["src/components/index"],
+      "@styles": ["src/styles/index"],
+      "@hooks": ["src/hooks/index"],
+      "@utils": ["src/utils/index"],
+      "@assets": ["src/assets/index"],
+      "@types": ["src/@types/types"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
