--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "next": "13.4.7",
+    "next-seo": "^6.1.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
+    "sharp": "^0.32.1",
     "superjson": "^1.12.4",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
