--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-collapsible": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@tanstack/react-query": "^4.29.17",
     "@trpc/client": "^10.32.0",
     "@trpc/next": "^10.32.0",
