--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "sharp": "^0.32.1",
     "superjson": "^1.12.4",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3",
     "typewriter-effect": "^2.20.1",
     "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "typescript": "^5.5.0-beta"
   }
 }
