--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-config-next": "13.4.7",
     "google-auth-library": "^9.14.1",
     "google-spreadsheet": "^4.1.4",
+    "immer": "^10.1.1",
     "lucide-react": "^0.445.0",
     "next": "13.4.7",
     "next-seo": "^6.1.0",
@@ -41,6 +42,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.3",
     "zod": "^3.21.4"
   },
   "devDependencies": {
